# datalogger-v2

./: .gitignore  Programa_TTA_IRSA_convertido v3.xlsx  README.md  config.dev.yaml  config.example.yaml  config.yaml  pyproject.toml
.claude/: settings.local.json
deploy/: datalogger_v2.service  setup.sh  update.sh
scripts/: modbus_sim.py
src/datalogger_v2/: __init__.py  __main__.py  addressing.py  auth.py  catalog.py  config.py  db.py  main.py  poller.py  state.py  web.py
src/datalogger_v2/static/: app.js  index.html  login.html  style.css
